# trello_monitorer

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  test.py
lib/: __init__.py  trello_api_getter.py
lib/common/: constants.py
lib/trello_api_getter/: __init__.py  trello_api_getter.py
